--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,29 +1,26 @@
-{% extends 'blog/base.html' %}
-{% load crispy_forms_tags %}
-{% block content %}
+{% extends 'blog/base.html' %} {% load crispy_forms_tags %} {% block content %}
 <div class="content-section">
-    <div class="media d-flex">
-      <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-      <div class="media-body">
-        <h2 class="account-heading">{{ user.username }}</h2>
-        {% if user.email %}
-        <p class="text-secondary">{{ user.email }}</p>
-        {% else %}
-        {% endif %}
-      </div>
+  <div class="media d-flex">
+    <img
+      class="rounded-circle account-img"
+      src="{{ user.profile.image.url }}"
+    />
+    <div class="media-body">
+      <h2 class="account-heading">{{ user.username }}</h2>
+      {% if user.email %}
+      <p class="text-secondary">{{ user.email }}</p>
+      {% else %} {% endif %}
     </div>
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4">
-                Profile Info
-            </legend>
-            {{ user_update_form|crispy }}
-            {{ profile_update_form|crispy }}
-        </fieldset>
-        <div class="form-group">
-            <button type="submit" class="btn btn-outline-info mb-2">Update</button>
-        </div>
-    </form>
   </div>
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <fieldset class="form-group">
+      <legend class="border-bottom mb-4">Profile Info</legend>
+      {{ user_update_form|crispy }} {{ profile_update_form|crispy }}
+    </fieldset>
+    <div class="form-group">
+      <button type="submit" class="btn btn-outline-info mb-2">Update</button>
+    </div>
+  </form>
+</div>
 {% endblock %}
