--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -48,6 +48,9 @@
               {% if user.is_authenticated %}
               <a class="nav-item nav-link" href="{% url 'profile' %}"
                 >Profile</a
+              >
+              <a class="nav-item nav-link" href="{% url 'post-create' %}"
+                >New Post</a
               >
               <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
