--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,8 +9,13 @@
     <div class="article-metadata">
       <a class="mr-2" href="#">{{ post.author }}</a>
       <small class="text-muted">{{ post.date_posted|date:'d F Y' }}</small>
+      {% if post.author == user %}
+        <div>
+          <a class="btn btn-secondary btn-sm my-1" href="{% url 'post-update' pk=post.id %}">Update</a>
+          <a class="btn btn-danger btn-sm my-1" href="{% url 'post-delete' pk=post.id %}">Delete</a>
+        </div>
+      {% endif %}
     </div>
-    <p>{{ post.id }}</p>
     <h2 class="article-title">{{ post.title }}</h2>
     <p class="article-content">{{ post.content }}</p>
   </div>
