--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,7 +7,7 @@
   />
   <div class="media-body">
     <div class="article-metadata">
-      <a class="mr-2" href="#">{{ post.author }}</a>
+      <a class="mr-2" href="{% url 'user-profile' post.author.username %}">{{ post.author }}</a>
       <small class="text-muted">{{ post.date_posted|date:'d F Y' }}</small>
       {% if post.author == user %}
         <div>
