--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -8,6 +8,9 @@
     </fieldset>
     <div class="form-group">
       <button type="submit" class="btn btn-outline-info mb-2">Login</button>
+      <small class="text-muted ms-2">
+        <a href="{% url 'password_reset' %}">Forgot Password?</a>
+      </small>
     </div>
   </form>
   <div class="border-top pt-3">
