--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -7,7 +7,9 @@
   />
   <div class="media-body">
     <div class="article-metadata">
-      <a class="mr-2" href="{% url 'user-profile' post.author.username %}">{{ post.author }}</a>
+      <a class="mr-2" href="{% url 'user-profile' post.author.username %}"
+        >{{ post.author }}</a
+      >
       <small class="text-muted">{{ post.date_posted|date:'d F Y' }}</small>
     </div>
     <h2>
@@ -18,33 +20,35 @@
     <p class="article-content">{{ post.content }}</p>
   </div>
 </article>
-{% endfor %} 
-
-{% if page_obj.paginator.num_pages > 1 %}
+{% endfor %} {% if page_obj.paginator.num_pages > 1 %}
 
 <div class="pagination">
   <span class="step-links">
-      {% if page_obj.has_previous %}
-          <a href="?page=1" class="btn btn-outline-info mb-4">&laquo; First</a>
-          <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-outline-info mb-4">Previous</a>
-      {% endif %}
-
-
-      {% for num in page_obj.paginator.page_range %}
-        {% if page_obj.number == num %}
-          <a href="?page={{ num }}" class="btn btn-info mb-4">{{ num }}</a>
-        {% elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2' %}
-          <a href="?page={{ num }}" class="btn btn-outline-info mb-4">{{ num }}</a>
-        {% endif %}
-      {% endfor %}
-
-      {% if page_obj.has_next %}
-          <a href="?page={{ page_obj.next_page_number }}" class="btn btn-outline-info mb-4">Next</a>
-          <a href="?page={{ page_obj.paginator.num_pages }}" class="btn btn-outline-info mb-4">Last &raquo;</a>
-      {% endif %}
+    {% if page_obj.has_previous %}
+    <a href="?page=1" class="btn btn-outline-info mb-4">&laquo; First</a>
+    <a
+      href="?page={{ page_obj.previous_page_number }}"
+      class="btn btn-outline-info mb-4"
+      >Previous</a
+    >
+    {% endif %} {% for num in page_obj.paginator.page_range %} {% if
+    page_obj.number == num %}
+    <a href="?page={{ num }}" class="btn btn-info mb-4">{{ num }}</a>
+    {% elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2' %}
+    <a href="?page={{ num }}" class="btn btn-outline-info mb-4">{{ num }}</a>
+    {% endif %} {% endfor %} {% if page_obj.has_next %}
+    <a
+      href="?page={{ page_obj.next_page_number }}"
+      class="btn btn-outline-info mb-4"
+      >Next</a
+    >
+    <a
+      href="?page={{ page_obj.paginator.num_pages }}"
+      class="btn btn-outline-info mb-4"
+      >Last &raquo;</a
+    >
+    {% endif %}
   </span>
 </div>
 
-{% endif %}
-
-{% endblock %}
+{% endif %} {% endblock %}
