--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,13 +7,23 @@
   />
   <div class="media-body">
     <div class="article-metadata">
-      <a class="mr-2" href="{% url 'user-profile' post.author.username %}">{{ post.author }}</a>
+      <a class="mr-2" href="{% url 'user-profile' post.author.username %}"
+        >{{ post.author }}</a
+      >
       <small class="text-muted">{{ post.date_posted|date:'d F Y' }}</small>
       {% if post.author == user %}
-        <div>
-          <a class="btn btn-secondary btn-sm my-1" href="{% url 'post-update' pk=post.id %}">Update</a>
-          <a class="btn btn-danger btn-sm my-1" href="{% url 'post-delete' pk=post.id %}">Delete</a>
-        </div>
+      <div>
+        <a
+          class="btn btn-secondary btn-sm my-1"
+          href="{% url 'post-update' pk=post.id %}"
+          >Update</a
+        >
+        <a
+          class="btn btn-danger btn-sm my-1"
+          href="{% url 'post-delete' pk=post.id %}"
+          >Delete</a
+        >
+      </div>
       {% endif %}
     </div>
     <h2 class="article-title">{{ post.title }}</h2>
