--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,7 +10,7 @@
       <a class="mr-2" href="{% url 'user-profile' post.author.username %}"
         >{{ post.author }}</a
       >
-      <small class="text-muted">{{ post.date_posted|date:'d F Y' }}</small>
+      <small class="text-muted">{{ post.last_update|date:'d F Y' }}</small>
       {% if post.author == user %}
       <div>
         <a
