--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -3,7 +3,7 @@
   <div class="media d-flex">
     <img
       class="rounded-circle account-img"
-      src="{{ user.profile.image.url }}"
+      src="{{ user.image.url }}"
     />
     <div class="media-body">
       <h2 class="account-heading">{{ user.username }}</h2>
@@ -16,7 +16,7 @@
     {% csrf_token %}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">Profile Info</legend>
-      {{ user_update_form|crispy }} {{ profile_update_form|crispy }}
+      {{ user_update_form|crispy }}
     </fieldset>
     <div class="form-group">
       <button type="submit" class="btn btn-outline-info mb-2">Update</button>
