fix(blog): optimized queries in all views

--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -5,7 +5,7 @@
 {% for post in posts %}
 <article class="media content-section d-flex">
   <img
-    src="{{ post.author.profile.image.url }}"
+    src="{{ post.author.image.url }}"
     alt=""
     class="rounded-circle article-img align-self-center"
   />
