--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -22,7 +22,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="mr-4 navbar-brand" href="{% url 'blog-home' %}"
+          <a class="mr-4 navbar-brand" href="{% url 'blog_home' %}"
             >Django Blog</a
           >
           <button
@@ -38,8 +38,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="mr-auto navbar-nav">
-              <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
-              <a class="nav-item nav-link" href="{% url 'blog-about' %}"
+              <a class="nav-item nav-link" href="{% url 'blog_home' %}">Home</a>
+              <a class="nav-item nav-link" href="{% url 'blog_about' %}"
                 >About</a
               >
             </div>
@@ -49,7 +49,7 @@
               <a class="nav-item nav-link" href="{% url 'profile' %}"
                 >Profile</a
               >
-              <a class="nav-item nav-link" href="{% url 'post-create' %}"
+              <a class="nav-item nav-link" href="{% url 'post_create' %}"
                 >New Post</a
               >
               <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
