--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -11,7 +11,7 @@
       <button type="submit" class="btn btn-outline-danger">Delete</button>
       <a
         class="btn btn-outline-secondary"
-        href="{% url 'post-detail' pk=post.id %}"
+        href="{% url 'post_detail' pk=post.id %}"
         >Cancel</a
       >
     </div>
