--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,10 +1,7 @@
 {% extends 'blog/base.html' %} {% load crispy_forms_tags %} {% block content %}
 <div class="content-section">
   <div class="media d-flex">
-    <img
-      class="rounded-circle account-img"
-      src="{{ user.image.url }}"
-    />
+    <img class="rounded-circle account-img" src="{{ user.image.url }}" />
     <div class="media-body">
       <h2 class="account-heading">{{ user.username }}</h2>
       {% if user.email %}
@@ -16,7 +13,7 @@
     {% csrf_token %}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">Profile Info</legend>
-      {{ user_update_form|crispy }}
+      {{ form|crispy }}
     </fieldset>
     <div class="form-group">
       <button type="submit" class="btn btn-outline-info mb-2">Update</button>
