--- a/blog/static/blog/css/main.css
+++ b/blog/static/blog/css/main.css
@@ -1,27 +1,18 @@
-body {
-  background: #fafafa;
-  color: #333333;
-  margin-top: 5rem;
+ul {
+  margin: 0;
 }
 
+.nav-bg {
+  background-color: #1d267d;
+}
+
+.site-header .navbar-nav .nav-link,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  color: #444444;
-}
-
-ul {
-  margin: 0;
-}
-
-.bg-steel {
-  background-color: #5f788a;
-}
-
-.site-header .navbar-nav .nav-link {
   color: #cbd5db;
 }
 
@@ -34,19 +25,13 @@ ul {
 }
 
 .content-section {
-  background: #ffffff;
-  padding: 10px 20px;
-  border: 1px solid #dddddd;
-  border-radius: 3px;
-  margin-bottom: 20px;
-}
-
-.article-title {
-  color: #444444;
+  padding: 0.5em 1.5em;
+  border: 2px solid #dddddd;
+  border-radius: 1em;
+  margin-bottom: 1.5em;
 }
 
 a.article-title:hover {
-  color: #428bca;
   text-decoration: none;
 }
 
@@ -55,9 +40,9 @@ a.article-title:hover {
 }
 
 .article-img {
-  height: 65px;
-  width: 65px;
-  margin-right: 16px;
+  height: 80px;
+  width: 80px;
+  margin-right: 1em;
 }
 
 .article-metadata {
@@ -66,8 +51,7 @@ a.article-title:hover {
   border-bottom: 1px solid #e3e3e3;
 }
 
-.article-metadata a:hover {
-  color: #333;
+.article-metadata a {
   text-decoration: none;
 }
 
