--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,10 +1,11 @@
 {% extends 'blog/base.html' %} {% block content %}
 {% if user.is_authenticated %}
 <div class="d-grid gap-2">
-  <button type="button" class="btn btn-outline-light btn-lg mb-3">+ Add new post</button>
+  <button type="button" class="btn btn-outline-light btn-lg mb-3">
+    + Add new post
+  </button>
 </div>
-{% endif %}
-{% for post in posts %}
+{% endif %} {% for post in posts %}
 <article class="media content-section d-flex">
   <img
     src="{{ post.author.image.url }}"
@@ -16,7 +17,9 @@
       <a class="mr-2" href="{% url 'user_profile' post.author.username %}"
         >{{ post.author }}</a
       >
-      <small class="text-muted fw-light article-date">{{ post.last_update|date:'d F Y' }}</small>
+      <small class="text-muted fw-light article-date"
+        >{{ post.last_update|date:'d F Y' }}</small
+      >
     </div>
     <h2>
       <a class="article-title" href="{% url 'post_detail' pk=post.id %}"
@@ -26,36 +29,4 @@
     <p class="article-content">{{ post.content }}</p>
   </div>
 </article>
-{% endfor %}
-
-{% if page_obj.paginator.num_pages > 1 %}
-<div class="pagination">
-  <span class="step-links">
-    {% if page_obj.has_previous %}
-    <a href="?page=1" class="btn btn-outline-light mb-4">&laquo; First</a>
-    <a
-      href="?page={{ page_obj.previous_page_number }}"
-      class="btn btn-outline-light mb-4"
-      >Previous</a
-    >
-    {% endif %} {% for num in page_obj.paginator.page_range %}
-    {% if page_obj.number == num %}
-    <a href="?page={{ num }}" class="btn btn-light mb-4">{{ num }}</a>
-    {% elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2' %}
-    <a href="?page={{ num }}" class="btn btn-outline-light mb-4">{{ num }}</a>
-    {% endif %} {% endfor %} {% if page_obj.has_next %}
-    <a
-      href="?page={{ page_obj.next_page_number }}"
-      class="btn btn-outline-light mb-4"
-      >Next</a
-    >
-    <a
-      href="?page={{ page_obj.paginator.num_pages }}"
-      class="btn btn-outline-light mb-4"
-      >Last &raquo;</a
-    >
-    {% endif %}
-  </span>
-</div>
-
-{% endif %} {% endblock %}
+{% endfor %} {% include "blog/pagination.html" %} {% endblock %}
