--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,9 +1,13 @@
 {% extends 'blog/base.html' %} {% block content %}
 {% if user.is_authenticated %}
 <div class="d-grid gap-2">
-  <button type="button" class="btn btn-outline-light btn-lg mb-3">
+  <a
+    href="{% url 'post_create' %}"
+    class="btn btn-outline-light btn-lg mb-3"
+    role="button"
+  >
     + Add new post
-  </button>
+  </a>
 </div>
 {% endif %} {% for post in posts %}
 <article class="media content-section d-flex">
