--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -18,7 +18,7 @@
   />
   <div class="media-body">
     <div class="article-metadata d-flex align-items-center gap-2">
-      <a class="mr-2" href="{% url 'user_profile' post.author.username %}"
+      <a class="mr-2 article-author" href="{% url 'user_profile' post.author.username %}"
         >{{ post.author }}</a
       >
       <small class="text-muted fw-light article-date"
