--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -11,7 +11,7 @@
   />
   <div class="media-body">
     <div class="article-metadata">
-      <a class="mr-2" href="{% url 'user_profile' post.author.username %}"
+      <a class="mr-2 article-author" href="{% url 'user_profile' post.author.username %}"
         >{{ post.author }}</a
       >
       <small class="text-muted">{{ post.last_update|date:'d F Y' }}</small>
