--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -1,13 +1,12 @@
 {% extends 'blog/base.html' %} {% block content %}
-
 <div class="content-section">
   <form method="post">
     {% csrf_token %}
     <fieldset class="form-group">
-      <legend class="border-bottom mb-4">Delete Post</legend>
+      <legend class="border-bottom">Delete Post</legend>
       <h2>Are you sure you want to delete the post "{{ post.title }}"?</h2>
     </fieldset>
-    <div class="form-group">
+    <div class="form-group mt-2">
       <button type="submit" class="btn btn-outline-danger">Delete</button>
       <a
         class="btn btn-outline-secondary"
