fix(templates): changed all buttons to match dark theme

--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -7,7 +7,7 @@
       {{ form|crispy }}
     </fieldset>
     <div class="form-group">
-      <button type="submit" class="btn btn-outline-info mb-2">Reset</button>
+      <button type="submit" class="btn btn-outline-light mb-2">Reset</button>
     </div>
   </form>
 </div>
