--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -16,7 +16,7 @@
       {{ form|crispy }}
     </fieldset>
     <div class="form-group">
-      <button type="submit" class="btn btn-outline-info mb-2">Update</button>
+      <button type="submit" class="btn btn-outline-light mb-2">Update</button>
     </div>
   </form>
 </div>
