--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -8,7 +8,7 @@
       {{ form|crispy }}
     </fieldset>
     <div class="form-group">
-      <button type="submit" class="btn btn-outline-info mb-2">Post</button>
+      <button type="submit" class="btn btn-outline-light mb-2">Post</button>
     </div>
   </form>
 </div>
