--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -7,7 +7,7 @@
       {{ form|crispy }}
     </fieldset>
     <div class="form-group">
-      <button type="submit" class="btn btn-outline-info mb-2">Login</button>
+      <button type="submit" class="btn btn-outline-light mb-2">Login</button>
       <small class="text-muted ms-2">
         <a href="{% url 'password_reset' %}">Forgot Password?</a>
       </small>
