--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -7,7 +7,7 @@
       {{ form|crispy }}
     </fieldset>
     <div class="form-group">
-      <button type="submit" class="btn btn-outline-info mb-2">Sign Up</button>
+      <button type="submit" class="btn btn-outline-light mb-2">Sign Up</button>
     </div>
   </form>
   <div class="border-top pt-3">
