--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -55,7 +55,7 @@
     </header>
     <main role="main" class="container mt-5">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-12 col-lg-8">
           {% if messages %} {% for message in messages %}
           <div
             class="alert alert-{{ message.tags }} alert-dismissible fade show mb-3"
@@ -71,7 +71,7 @@
           </div>
           {% endfor %} {% endif %} {% block content %} {% endblock %}
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 d-md-none d-lg-block">
           <div class="content-section py-3">
             <h3>Our Sidebar</h3>
             <p class="text-muted">
