--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -71,7 +71,7 @@
           </div>
           {% endfor %} {% endif %} {% block content %} {% endblock %}
         </div>
-        <div class="col-md-4 d-md-none d-lg-block">
+        <div class="col-md-4 d-none d-lg-block">
           <div class="content-section py-3">
             <h3>Our Sidebar</h3>
             <p class="text-muted">
