--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -43,7 +43,10 @@
             <div class="navbar-nav ms-auto">
               {% if user.is_authenticated %}
               <a class="nav-link" href="{% url 'profile' %}">My Profile</a>
-              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+              <form action="{% url 'logout' %}" method="post">
+                {% csrf_token %}
+                <button type="submit" class="nav-link">Logout</button>
+              </form>
               {% else %}
               <a class="nav-link" href="{% url 'login' %}">Login</a>
               <a class="nav-link" href="{% url 'register' %}">Register</a>
