--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,12 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="{% static 'blog/css/main.css'%}" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'blog/css/main.css'%}"
+    />
     {% if title %}
     <title>{{ title }}</title>
     {% else %}
@@ -23,10 +27,7 @@
       <nav class="navbar navbar-expand-lg nav-bg">
         <div class="container">
           <a class="navbar-brand" href="{% url 'blog_home' %}"
-            ><img
-              src="{% static 'blog/img/logo.png'%}"
-              alt="logo"
-              class="logo"
+            ><img src="{% static 'blog/img/logo.png'%}" alt="logo" class="logo"
           /></a>
           <button
             class="navbar-toggler"
@@ -99,8 +100,8 @@
       </div>
     </main>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
-      integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
   </body>
